@@ -6,6 +6,11 @@
 @par
 <B>Version 6.1.0</B> - <I>In development</I>
 
+@par
+Bug fixes:
+- Fixed a bug in the @link tools/Clip.h clip@endlink tool that caused
+  some grid metadata to be discarded.
+
 
 @htmlonly <a name="v6_0_0_changes"></a>@endhtmlonly
 @par
